<resources>
    <string name="app_name">EScreening3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FPNO</string>
    <string name="nav_header_subtitle">Student Screening</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Welcome to FPNO eScreening</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_academicUndertaking">Academic Undertaking</string>
    <string name="menu_antiCultUndertaking">Anti-Cult Undertaking</string>
    <string name="menu_studentRegistration">Student Registration</string>
    <string name="menu_courseRegistration">Course Registration</string>
    <string name="menu_hndProgramme">HND Programme</string>
    <string name="menu_bioData">Bio Data</string>
    <string name="menu_fragseven">Student Registration</string>
    <string name="Registration">Registration</string>
    <string name="Undertaking">Undertaking</string>
    <string name="save">Save</string>
    <string name="my_status">My Status</string>
</resources>